# LighterWave

./: .gitignore  CMakeLists.txt  README.md
blender_exporter/: .gitignore  CMakeLists.txt  README.md  build_lightwave_blender.bat  build_lightwave_blender.sh
blender_exporter/lightwave_blender/: __init__.py  addon_preferences.py  camera.py  compositing.py  export_context.py  exporter.py  exporter_ui.py  fur.py  light.py  materials.py  mesh.py  node.py  node_graph.py  registry.py  shape.py  shared_lib.py  transform.py  utils.py  world.py  xml_node.py
cmake/: SetupLTO.cmake
include/: lightwave.hpp
include/lightwave/: bsdf.hpp  camera.hpp  color.hpp  core.hpp  emission.hpp  hash.hpp  hashgrid.hpp  image.hpp  instance.hpp  integrator.hpp  interpolating.hpp  iterators.hpp  lens.hpp  light.hpp  logger.hpp  math.hpp  noise.hpp  opsr_data.hpp  opsr_path.hpp  parallel.hpp  profiler.hpp  properties.hpp  registry.hpp  sampler.hpp  scene.hpp  shape.hpp  texture.hpp  transform.hpp  warp.hpp
src/bsdfs/: add_shader.cpp  conductor.cpp  dielectric.cpp  diffuse.cpp  hair.cpp  mix_shader.cpp  principled.cpp  roughconductor.cpp  roughdielectric.cpp  translucent.cpp
src/cameras/: perspective.cpp  realistic.cpp  thinlens.cpp
src/core/: camera.cpp  core.cpp  instance.cpp  integrator.cpp  logger.cpp  math.cpp  parser.cpp  plyparser.cpp  plyparser.hpp  profiler.cpp  registry.cpp  scene.cpp  streaming.cpp  transform.cpp  xml.cpp
src/emissions/: lambertian.cpp
src/integrators/: aov.cpp  camera.cpp  direct.cpp  pathtracer.cpp  regularisedpathtracer.cpp
src/lenses/: spherical.cpp
src/lights/: area.cpp  directional.cpp  envmap.cpp  point.cpp  simpleenvmap.cpp  sun.cpp  warp2denvmap.cpp
src/postprocesses/: LUT.cpp  Tonemapping.cpp  agx.cpp  brightness_contrast.cpp  color_balance.cpp  color_inverting.cpp  colorramp.cpp  denoising.cpp  exposure.cpp  fog.cpp  hue_saturation_value.cpp  math.cpp  mixColor.cpp
src/samplers/: halton.cpp
src/shapes/: accel.hpp  displaced.cpp  group.cpp  hairs.cpp  mandelbulb.cpp  mesh.cpp  rectangle.cpp  sphere.cpp
src/tests/: image.cpp
src/textures/: ao.cpp  brightness_contrast.cpp  checkerboard.cpp  color_ramp.cpp  combine_xyz.cpp  constant.cpp  curves_info.cpp  fresnel.cpp  geometry_info.cpp  hue_saturation.cpp  image.cpp  image_lod.cpp  invert.cpp  map_range.cpp  math.cpp  mix.cpp  noise.cpp  object_info.cpp  particle_info.cpp  separate.cpp  wave.cpp
tests/: .gitignore
tests/bvh/: bvh_complex.xml  bvh_complex_ref.exr  bvh_simple.xml  bvh_simple_ref.exr  image_modes_bvh.xml  image_modes_bvh_ref.exr  terminator_bunny_bvh.xml  terminator_bunny_bvh_ref.exr
tests/cameras/: bunny_realistic.xml  bunny_realistic_ref.exr  bunny_thin.xml  bunny_thin_ref.exr
tests/cornell_box/: cornell_box.xml  cornell_box_ref.exr
tests/displacement/: displaced_quad_ref.exr  (+5 more)
(+207 files in other folders)
